# NL2NL

./: .gitignore  README.md  manage.py  pyproject.toml
NL2SQL2/: asgi.py  settings.py  urls.py  wsgi.py
app/: admin.py  aiTools.py  aiView.py  models.py  views.py
app/migrations/: 0001_initial.py  0002_databaseconnection_fetched_schema_and_more.py  0003_databaseconnection_is_file_based_and_more.py  0004_queryhistory_result_columns_queryhistory_result_rows.py  0005_llmprovider_llmmodel.py  0006_alter_llmprovider_provider.py  0007_dashboardchart.py  0008_add_community_key.py
app/providers/: anthropic.py  gemini.py  ollama.py  openai.py  openrouter.py  router.py
templates/: add_database.html  base.html  chat.html  dashboard.html  dashboard_empty.html  databases.html  docs.html  login.html  register.html  settings.html  upload_file_db.html
