[project]
name = "nl2sql"
version = "0.1.0"
description = "Lightweight NL2SQL Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=1.1.0",
    "markdown>=3.10.2",
    "python-dotenv>=1.2.2",
    "sqlglot>=30.11.0",
]